objects/footprint__footprint_Listview__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>footprint__Columns__c</fullName>
        <label>Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>footprint__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__formula__c</fullName>
        <label>formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__hasBeenDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasBeenDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>footprint__query__c</fullName>
        <label>query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true then everybody should see this list view</description>
        <label>sharing with all</label>
        <type>Checkbox</type>
    </fields>
    <label>footprint_ListView</label>
</CustomObject>